kubernetes/memc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: memcached:latest
        ports:
        - containerPort: 11211
---

apiVersion: v1
kind: Service
metadata:
  name: memc-service
spec:
  selector:
    app: memcached
  ports:
    - name: http
      protocol: TCP
      port: 11211
      targetPort: 11211
  type: ClusterIP
