kubernetes/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-sql
  serviceName: my-sql
  template:
    metadata:
      labels:
        app: my-sql
    spec:
      containers:
      - name: my-sql
        image: ahmedmohsen98/mysql:v1.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: my-ebs-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: my-ebs-volume
        awsElasticBlockStore:
          volumeID: vol-06eef66c0e4e7a478
          fsType: ext4
  dependsOn:
  - apiVersion: v1
    kind: ConfigMap
    name: vp-configmap
  - apiVersion: v1
    kind: vp-secret
    name: my-secret
  - apiVersion: v1
    kind: Deployment
    name: rabmq
  - apiVersion: v1
    kind: Deployment
    name: memcached

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: my-sql
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
