kubernetes/rabmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabmq
  spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabmq
  template:
    metadata:
      labels:
        app: rabmq
    spec:
      containers:
      - name: rabmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 15672
---

apiVersion: v1
kind: Service
metadata:
  name: rabmq-service
spec:
  selector:
    app: rabmq
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
