kubernetes/vp-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vp-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vp-app
  template:
    metadata:
      labels:
        app: vp-app
    spec:
      containers:
      - name: vp-app
        image: ahmedmohsen98/vp-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vp-app-service
spec:
  type: LoadBalancer
  selector:
    app: vp-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
